1-nap-policies/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app1"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app1.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80
